--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,7 @@ limitations under the License. -->
     <string name="button_save">Save</string>
     <string name="empty_not_saved">Word not saved because it is empty.</string>
     <string name="add_word">Add word</string>
+    <string name="mandatory">Mandatory</string>
+    <string name="empty">-</string>
+    <string name="error">Not more records</string>
 </resources>
